--- a/src/filters.yaml
+++ b/src/filters.yaml
@@ -636,3 +636,11 @@ filters:
     tags:
       - format string
     impact: 10
+
+  - id: 79
+    rule: (burpcollaborator\.net|canarytokens\.com|oast\.(online|(liv|sit|m)e|fun|pro))
+    description: Detects out-of-band (OOB) interaction or Server-Side Request Forgery (SSRF) attack attempts
+    tags:
+      - ssrf
+      - oob
+    impact: 10
